<resources>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="Adjust_blue_area_to_elongate_body">Adjust the blue area to elongate body</string>
    <string name="Apply">Apply</string>
    <string name="Auto_Blemish">Auto-Blemish</string>
    <string name="Beauty">Beauty</string>
    <string name="Big_Eyes">Big Eyes</string>
    <string name="Blemish">Blemish</string>
    <string name="BlemishNote">Pinch zoom the photo and tap blemishes to remove them</string>
    <string name="Brighten">Brighten</string>
    <string name="CameraTakeFaceTipText">For best result please face the camera!</string>
    <string name="Clear_Eyes">ClearEyes</string>
    <string name="Download">Download</string>
    <string name="Filter">Filter</string>
    <string name="FunText">FunText</string>
    <string name="FunTextDownloadTip">This FunText requires download special characters in order to edit.</string>
    <string name="FunTextLibrary">FunText Library</string>
    <string name="Gallery">Gallery</string>
    <string name="KeyptSetNote">Move the 2 buttons on top of each eye</string>
    <string name="LightPlus">Light+</string>
    <string name="Lighting_Border_tip">Lighting and Border are now inside Frames</string>
    <string name="Lineart">Lineart</string>
    <string name="LinkChangePosition">Choose two photos to exchange</string>
    <string name="MakeUp">MakeUp</string>
    <string name="Natural">Natural</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="Reset">Reset</string>
    <string name="Reset_Library">Manager Library</string>
    <string name="Sexy">Sexy</string>
    <string name="Skin_Texture">Texture</string>
    <string name="Skin_Tone">Tone</string>
    <string name="Slim">Slim</string>
    <string name="Slim_Face">Slim Face</string>
    <string name="Soften">Soften</string>
    <string name="Switch">Switch</string>
    <string name="Try_it_now">Try it now</string>
    <string name="UpLoading">UpLoading</string>
    <string name="Use_Filter_to_find_styles_you_like_quickly">Use Filter to find styles you like quickly</string>
    <string name="action_settings">Settings</string>
    <string name="activate_now">Okay</string>
    <string name="adjustTip">Adjust</string>
    <string name="adjust_colortemp">ColorTemp</string>
    <string name="adjust_contrast">Contrast</string>
    <string name="adjust_gamma">Levels</string>
    <string name="adjust_highlight">Highlight</string>
    <string name="adjust_saturation">Saturation</string>
    <string name="adjust_shadow">Shadow</string>
    <string name="adjust_sharpen">Sharpen</string>
    <string name="adjust_whiteblance">WB</string>
    <string name="advertise_help">Help</string>
    <string name="album_choose">Album</string>
    <string name="alert_continue">Continue</string>
    <string name="all_mags_downloaded">All Mags have been downloaded</string>
    <string name="all_title">You have turned on the charging monitor.</string>
    <string name="app_beauty_descp">  InstaBeauty</string>
    <string name="app_recommend">Cool App</string>
    <string name="app_to_unlock">To use this style, you need to download another app!</string>
    <string name="arts">Arts</string>
    <string name="attachToContact">select</string>
    <string name="attention">attention</string>
    <string name="auto">Auto</string>
    <string name="auto_beauty">Auto-Beauty</string>
    <string name="auto_beauty_waiting">Beauty in process, please wait.</string>
    <string name="auto_eyebag">Auto-Eyebag</string>
    <string name="auto_whitening">Auto-Beauty</string>
    <string name="autoretouch">Auto Retouch</string>
    <string name="b_ok">OK</string>
    <string name="back">Back</string>
    <string name="background_color">Background Color</string>
    <string name="backgrounds">Background</string>
    <string name="backlit">Backlit</string>
    <string name="battery_capacity">Capacity</string>
    <string name="battery_info">Save Power</string>
    <string name="battery_switch">Switch</string>
    <string name="battery_temperature">Temperature</string>
    <string name="battery_voltage">Voltage</string>
    <string name="beauty">Beauty</string>
    <string name="beauty_camera">QuickSnap</string>
    <string name="beauty_fun">Beauty</string>
    <string name="beautys">Beauty</string>
    <string name="big">Large</string>
    <string name="block_text1">Amazing functions</string>
    <string name="block_text2">Setting</string>
    <string name="blush">Blush</string>
    <string name="blusher">Blushes</string>
    <string name="boost">Boost</string>
    <string name="border">Border</string>
    <string name="brighten">Brighten</string>
    <string name="btn_correct_txt">Adjust</string>
    <string name="btn_no_correct_orien">Wrong</string>
    <string name="btn_sure_pic_orien">OK</string>
    <string name="btn_yes_correct_orien">Right</string>
    <string name="caizhuang">Makeup</string>
    <string name="camera_error_content">Oopse, unable to open Camera. Please check system setting and enable FotoRus to access Camera. If it still does not work, try restarting your phone.</string>
    <string name="camera_error_head">Camera Error</string>
    <string name="camera_error_sure">Sure</string>
    <string name="camera_save_photo">Saving photo.</string>
    <string name="camera_shortcut">Created a desktop shortcut icon of beauty camera for you already. Take convenient photos!</string>
    <string name="camera_shortcut_name">FotoSelfie</string>
    <string name="camera_shortcut_ok">ok</string>
    <string name="camera_shortcut_title">Camera ShortCut</string>
    <string name="cancel">Cancel</string>
    <string name="capture_frame">Frames:</string>
    <string name="changeToFreeFragment">Free puzzle</string>
    <string name="changeToGridFragment">Template puzzle</string>
    <string name="change_canceled">Canceled</string>
    <string name="change_passcode">Change passcode</string>
    <string name="change_picuture_name">InstaBeauty</string>
    <string name="change_position_help">Press-hold and move photo to swith position, Touch photo to apply Filters.</string>
    <string name="charge_complet">Fully Charged</string>
    <string name="charge_continuous">Continuous</string>
    <string name="charge_continuous_des">The electrical current is lowered to ensure a complete charge</string>
    <string name="charge_full_remaining_time">Estimated Charge Remaining</string>
    <string name="charge_protect">Charge Protect</string>
    <string name="charge_speed">Speed</string>
    <string name="charge_speed_des">Battery first charges quickly to 80%</string>
    <string name="charge_trickle">Trickle</string>
    <string name="charge_trickle_des">Complete the trickle stage to help extend battery life</string>
    <string name="charging_mirror_tip">Turn your phone into a handy mirror！</string>
    <string name="click_screen_capture">Tap screen to shot</string>
    <string name="confirm_delete">Confirm delete?</string>
    <string name="content1_correct_preview_orien">Please keep the phone in portrait status!</string>
    <string name="content2_correct_preview_orien">Right preview direction？</string>
    <string name="delay_capture">Delay 3 sec</string>
    <string name="dlg_fivestar_cancel">Not really</string>
    <string name="dlg_fivestar_content">Enjoying FotoRus? Rate us 5 stars!</string>
    <string name="dlg_fivestar_ok">Yes!</string>
    <string name="no">NO</string>
    <string name="notify_click_optimize">Optimize</string>
    <string name="notify_current_level">"Power status "</string>
    <string name="notify_lower_20">lower than 20%</string>
    <string name="optimize">OPTIMIZE</string>
    <string name="sure">Sure</string>
    <string name="title_correct_preview_orien">Revise Camera Direction</string>
    <string name="txt_correct_camera_orien">Revise Camera</string>
    <string name="yes">YES</string>
    <string name="eight">8</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="zero">0</string>
</resources>