<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff363636" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/title_correct_preview_orien" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff363636" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/content1_correct_preview_orien" />
        <TextView android:textSize="16.0sp" android:textColor="#ff363636" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/content2_correct_preview_orien" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="10.0dip" android:layout_marginTop="10.0dip" android:weightSum="2.0">
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/btn_true_correct_orien" android:background="@drawable/btn_bg_correct_camera_orientation" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/btn_yes_correct_orien" android:layout_weight="1.0" />
        <View android:layout_width="10.0dip" android:layout_height="fill_parent" />
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/btn_false_correct_orien" android:background="@drawable/btn_bg_correct_camera_orientation" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/btn_no_correct_orien" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>