<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_gravity="center" android:layout_width="200.0dip" android:layout_height="100.0dip">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/videosticker_deletevideo_bg" android:layout_width="200.0dip" android:layout_height="68.0dip" android:layout_marginBottom="32.0dip">
            <TextView android:textSize="15.0sp" android:textColor="@color/color_truegray" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/confirm_delete" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="200.0dip" android:layout_height="32.0dip" android:layout_marginTop="5.0dip" android:weightSum="2.0">
            <Button android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/btn_no" android:background="@drawable/videosticker_deletevideo_leftbtn_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/no" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/btn_yes" android:background="@drawable/videosticker_deletevideo_rightbtn_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/yes" android:layout_weight="1.0" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>